--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "serve.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"npm serve"
+    "start":"node serve"
   },
   "repository": {
     "type": "git",
