--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "request": "^2.81.0",
     "request-promise": "^4.2.0",
     "when": "^3.7.8"
+  },
+  "engines": {
+    "node": "6.9.1"
   }
 }
